# py-timerfunc

./: README.md  pyproject.toml
src/philiprehberger_timerfunc/: __init__.py
tests/: test_timerfunc.py
