[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "philiprehberger-timerfunc"
version = "0.1.5"
description = "Measure execution time of any function"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Philip Rehberger" }]
keywords = ["timer", "benchmark", "performance", "profiling", "decorator"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/philiprehberger/py-timerfunc#readme"
Repository = "https://github.com/philiprehberger/py-timerfunc"
Issues = "https://github.com/philiprehberger/py-timerfunc/issues"
Changelog = "https://github.com/philiprehberger/py-timerfunc/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/philiprehberger_timerfunc"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
strict = true
